增加redis和kaptcha验证码

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,10 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>test</title>
+    <meta charset="UTF-8"/>
+    <title>Title</title>
 </head>
-<h2>我是一个模板</h2>
 <body>
-
+    <h2>验证成功了！！！！！！！！！！！！！！</h2>
 </body>
 </html>
